namespace RPGManager.Desktop.Domain.Entities;

public class Spell
{

}