namespace RpgContentCreator.Domain.Models;

public class GameSystemModel
{
    public Guid Id { get; set; }
    public string Name { get; set; }
}